tests/cases/ok/package_nested_imports_main.p4
import pkgfix.board


def main() -> None:
    print(pkgfix.board.make_total())
