tests/cases/fail/super_outside_method.p4
def main() -> None:
    super().label()
